--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -18,169 +18,182 @@
     <header class="header">
         <div class="navbar-wrapper">
             <a href="index.html">        
-        <figure class="logo">
-            <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
-            <span class="page-title is-vertical-middle">
-                RodaCork
-            </span>
-        </figure>
-
-    <nav class="navbar">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/login.html" class="button is-primary-black is-small" style="margin-left:16px;" target="_blank">Login</a>
-            </li>
-        </ul>
-    </nav>
-    </header>
-
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <figure class="column is-6">
-                    <img class="image" src="/tvieira/images/undraw_off_road_9oae.svg" alt="Hero Image">
+                <figure class="logo">
+                    <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
+                    <span class="page-title is-vertical-middle">
+                        RodaCork
+                    </span>
                 </figure>
-            
-                <div class="column is-6 is-vertical-top">
-                    <h1 class="title is-1">
-                        My page title
-                    </h1>
-                    <h2 class="subtitle">My page subtitle</h2>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
-                        alias quos facilis.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section> 
+            </a>
 
+        <nav class="navbar">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="/jose/index.html" target="_blank">José</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/tvieira/login.html" class="button is-primary-black is-small" style="margin-left:16px;" target="_blank">Login</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-<main id="content">
-    <section class="main-section">
-        <div class="row">
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-yellow">
-                            <i class="fas fa-chart-bar"></i>
-                        </span>
-                        <h3> Section 1</h3>
-                        <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                        modi eligendi aliquam tempora quod praesentium!
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-green">
-                            <i class="fas fa-user"></i>
-                        </span>
-                        <h3> Section 2</h3>
-                        <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                        modi eligendi aliquam tempora quod praesentium!
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-purple">
-                            <i class="fas fa-search"></i>
-                        </span>
-                        <h3> Section 3</h3>
+    <main id="content"></main>
+        <section class="hero">
+            <div class="container">
+                <div class="row">
+                    <div class="column is-7 is-vertical-top">
+                        <h1 class="title is-1">
+                            My page title
+                        </h1>
+                        <h2 class="subtitle">My page subtitle</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                            modi eligendi aliquam tempora quod praesentium!
+                            Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
+                            alias quos facilis.
                         </p>
+                        <div class="row is-small">
+                            <div class="column is-7">
+                                <input type="text" id="input-name" placeholder="Please insert your name"
+                                        class="input is-dark">
+                            </div>
+                        </div>
+                        <div class="column is-5">
+                            <button type="button" class="button is-primary">Get early access</button>
+                        </div>
+                    </div>
+                </div>
+
+                <figure class="column is-5">
+                    <img class="image" src="/tvieira/images/undraw_off_road_9oae.svg" alt="Hero Image">
+                </figure>
+                </div>
+            </div>
+    </section> 
+
+        <section class="main-section">
+            <div class="container">
+                <div class="row">
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-bar"></i>
+                                </span>
+                                <h3> Section 1</h3>
+                                <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                                modi eligendi aliquam tempora quod praesentium!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-green">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <h3> Section 2</h3>
+                                <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                                modi eligendi aliquam tempora quod praesentium!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-purple">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                                <h3> Section 3</h3>
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                                    modi eligendi aliquam tempora quod praesentium!
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-</main>
+        </section>
+    </main>
    
-<footer class="footer">
-    <nav class="footer-nav">
-        <div class="row">
-            <div class="column is-6">
-            <figure class="logo">
-                <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
-                <span>RodaCork</span>
-            </figure>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
+    <footer class="footer">
+        <nav class="footer-nav">
+            <div class="row">
+                <div class="column is-6">
+                <figure class="logo">
+                    <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
+                    <span>RodaCork</span>
+                </figure>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            </div>
+            <div class="row">
+        <div clas="column is-3">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="/Alexandre/index.html" target="_blank">Alexandre</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/Carlos/first_project/index.html" target="_blank">Carlos Campos</a>
+                </li>
+            </ul>
         </div>
+
+        <div clas="column is-3">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="/inesfolder/index.html" target="_blank">Inês Correia</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/pedro/index.html" target="_blank">Pedro Barbosa</a>
+                </li>
+            </ul>
         </div>
-        <div class="row">
-    <div clas="column is-3">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="/Alexandre/index.html" target="_blank">Alexandre</a>
-            </li>
-            <li class="menu-item">
-                <a href="/Carlos/first_project/index.html" target="_blank">Carlos Campos</a>
-            </li>
-        </ul>
-    </div>
 
-    <div clas="column is-3">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="/inesfolder/index.html" target="_blank">Inês Correia</a>
-            </li>
-            <li class="menu-item">
-                <a href="/pedro/index.html" target="_blank">Pedro Barbosa</a>
-            </li>
-        </ul>
-    </div>
+        <div clas="column is-3">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="/tvieira/index.html" target="_blank">Tânia Vieira</a>
+                </li>
 
-    <div clas="column is-3">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="/tvieira/index.html" target="_blank">Tânia Vieira</a>
-            </li>
-
-            <li class="menu-item">
-                <a href="/vitor/index.html" target="_blank">Vitor Coelho</a>
-            </li>
-        </ul>
+                <li class="menu-item">
+                    <a href="/vitor/index.html" target="_blank">Vitor Coelho</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-</nav>
-</footer>
+    </nav>
+    </footer>
 
 </body>
 
